fix: z clipping

--- a/examples/tinychat/index.css
+++ b/examples/tinychat/index.css
@@ -206,6 +206,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 
 .input {
